# nosetip_finder

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CloudsLog.h  Computation.cpp  Cropper.cpp  Makefile  NosetipFinder.h  README.md  Utils.cpp  Utils.h  bs000_E_DISGUST_0_Fall2003.pcd  cmake_install.cmake  index.js  main.cpp  package-lock.json  shapeOperator.cpp
cmd/nan-module/: CMakeLists.txt  main.cpp  package.json
cmd/regular/: CMakeLists.txt  main.cpp
src/: CloudsLog.cpp  CloudsLog.h  Computation.cpp  Computation.h  Cropper.cpp  Cropper.h  Main.cpp  Main.h  NosetipFinder.cpp  NosetipFinder.h  Utils.cpp  Utils.h  main.cpp
